# mcpreaper

./: .gitignore  LICENSE  README.md  main.py  requirements.txt
ReaperProject/: helloreaper.rpp  testreaper.rpp
TEST/: reapyTest.ipynb
mcpreaper/TEST/: reapyTest.ipynb
mcpreaper/WAV/: description.txt
pxqmr/: README.md  main.py  pyproject.toml
pxqmr/tools/: __init__.py  item_tools.py  project_tools.py  track_tools.py
pxqmr/utils/: reaper_client.py
resource/: description.txt
resource/peaks/: a.wav.reapeaks
scripts/: check_reaper_connection.py  check_web_2307.ps1  clean_and_rerun.py  cleanup_all_tracks.py  cleanup_remaining.py  clear_project.py  compose_direct.py  compose_final.py  compose_imperial_court.py  compose_via_midi_file.py  enable_reapy_server.lua  final_verify.py  fix_hosts.bat  import_midi_files.py  reapy_bind_local_2306.lua  run_safe.py  run_with_timeout.py  set_midi_hardware_output.py  set_midi_hwout_chunk.py  step1_clear_tracks.py  validate_all_apis.py
testpy/: reascript_test.ipynb  tool_reaper.py  tool_search.py
tools/: __init__.py  audio_tools.py  envelope_tools.py  eq_tools.py  film_tools.py  fx_tools.py  generate_tools.py  item_tools.py  marker_tools.py  metronome_tools.py  midi_ext_tools.py  midi_tools.py  playback_tools.py  project_tools.py  render_tools.py  send_tools.py  take_tools.py  time_selection_tools.py  track_tools.py
ui/: __init__.py  chat.py  server.py
utils/: __init__.py  audio_analysis.py  error_handler.py  midi_helpers.py  project_reporter.py  reaper_client.py
(+8 files in other folders)
